ir/parser/smellyParser.py
# Generated from ir/smelly.g4 by ANTLR 4.13.0
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class smellyParser ( Parser ):

    grammarFileName = "smelly.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'if'", "'else'", "'func'", "'while'", 
                     "'break'", "'return'", "'continue'", "'''", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'nil'", "<INVALID>", 
                     "'+'", "'-'", "'*'", "'/'", "'%'", "'=='", "'!='", 
                     "'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", "'!'", 
                     "'.'", "','", "'='", "'('", "')'", "'{'", "'}'", "'->'" ]

    symbolicNames = [ "<INVALID>", "IF", "ELSE", "FUNC", "WHILE", "BREAK", 
                      "RETURN", "CONTINUE", "APOSTROPHE", "INT", "FLOAT", 
                      "STRING", "BOOL", "NIL", "ID", "ADD", "SUB", "MUL", 
                      "DIV", "MOD", "EEQ", "NEQ", "GT", "LT", "GTE", "LTE", 
                      "AND", "OR", "NOT", "DOT", "COMMA", "ASSIGN", "LPAREN", 
                      "RPAREN", "LBRACE", "RBRACE", "RETURNS", "COMMENT", 
                      "WHITESPACE" ]

    RULE_parse = 0
    RULE_type = 1
    RULE_stmt = 2
    RULE_bodyStmts = 3
    RULE_body = 4
    RULE_ifStmt = 5
    RULE_elseifStmt = 6
    RULE_elseStmt = 7
    RULE_whileStmt = 8
    RULE_funcAssign = 9
    RULE_varAssign = 10
    RULE_arg = 11
    RULE_args = 12
    RULE_param = 13
    RULE_params = 14
    RULE_call = 15
    RULE_atom = 16
    RULE_expr = 17

    ruleNames =  [ "parse", "type", "stmt", "bodyStmts", "body", "ifStmt", 
                   "elseifStmt", "elseStmt", "whileStmt", "funcAssign", 
                   "varAssign", "arg", "args", "param", "params", "call", 
                   "atom", "expr" ]

    EOF = Token.EOF
    IF=1
    ELSE=2
    FUNC=3
    WHILE=4
    BREAK=5
    RETURN=6
    CONTINUE=7
    APOSTROPHE=8
    INT=9
    FLOAT=10
    STRING=11
    BOOL=12
    NIL=13
    ID=14
    ADD=15
    SUB=16
    MUL=17
    DIV=18
    MOD=19
    EEQ=20
    NEQ=21
    GT=22
    LT=23
    GTE=24
    LTE=25
    AND=26
    OR=27
    NOT=28
    DOT=29
    COMMA=30
    ASSIGN=31
    LPAREN=32
    RPAREN=33
    LBRACE=34
    RBRACE=35
    RETURNS=36
    COMMENT=37
    WHITESPACE=38

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.0")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(smellyParser.EOF, 0)

        def stmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(smellyParser.StmtContext)
            else:
                return self.getTypedRuleContext(smellyParser.StmtContext,i)


        def getRuleIndex(self):
            return smellyParser.RULE_parse

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParse" ):
                return visitor.visitParse(self)
            else:
                return visitor.visitChildren(self)




    def parse(self):

        localctx = smellyParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4563500570) != 0):
                self.state = 36
                self.stmt()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(smellyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(smellyParser.ID, 0)

        def getRuleIndex(self):
            return smellyParser.RULE_type

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitType" ):
                return visitor.visitType(self)
            else:
                return visitor.visitChildren(self)




    def type_(self):

        localctx = smellyParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_type)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(smellyParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcAssign(self):
            return self.getTypedRuleContext(smellyParser.FuncAssignContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(smellyParser.WhileStmtContext,0)


        def ifStmt(self):
            return self.getTypedRuleContext(smellyParser.IfStmtContext,0)


        def varAssign(self):
            return self.getTypedRuleContext(smellyParser.VarAssignContext,0)


        def expr(self):
            return self.getTypedRuleContext(smellyParser.ExprContext,0)


        def getRuleIndex(self):
            return smellyParser.RULE_stmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStmt" ):
                return visitor.visitStmt(self)
            else:
                return visitor.visitChildren(self)




    def stmt(self):

        localctx = smellyParser.StmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_stmt)
        try:
            self.state = 51
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.funcAssign()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.whileStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 48
                self.ifStmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 49
                self.varAssign()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 50
                self.expr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyStmtsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def stmt(self):
            return self.getTypedRuleContext(smellyParser.StmtContext,0)


        def RETURN(self):
            return self.getToken(smellyParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(smellyParser.ExprContext,0)


        def CONTINUE(self):
            return self.getToken(smellyParser.CONTINUE, 0)

        def BREAK(self):
            return self.getToken(smellyParser.BREAK, 0)

        def getRuleIndex(self):
            return smellyParser.RULE_bodyStmts

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBodyStmts" ):
                return visitor.visitBodyStmts(self)
            else:
                return visitor.visitChildren(self)




    def bodyStmts(self):

        localctx = smellyParser.BodyStmtsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_bodyStmts)
        try:
            self.state = 58
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 4, 9, 10, 11, 12, 13, 14, 16, 28, 32]:
                self.enterOuterAlt(localctx, 1)
                self.state = 53
                self.stmt()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 54
                self.match(smellyParser.RETURN)
                self.state = 55
                self.expr(0)
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 56
                self.match(smellyParser.CONTINUE)
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 4)
                self.state = 57
                self.match(smellyParser.BREAK)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(smellyParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(smellyParser.RBRACE, 0)

        def bodyStmts(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(smellyParser.BodyStmtsContext)
            else:
                return self.getTypedRuleContext(smellyParser.BodyStmtsContext,i)


        def getRuleIndex(self):
            return smellyParser.RULE_body

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):

        localctx = smellyParser.BodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_body)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(smellyParser.LBRACE)
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4563500794) != 0):
                self.state = 61
                self.bodyStmts()
                self.state = 66
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 67
            self.match(smellyParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(smellyParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(smellyParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(smellyParser.BodyContext,0)


        def elseifStmt(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(smellyParser.ElseifStmtContext)
            else:
                return self.getTypedRuleContext(smellyParser.ElseifStmtContext,i)


        def elseStmt(self):
            return self.getTypedRuleContext(smellyParser.ElseStmtContext,0)


        def getRuleIndex(self):
            return smellyParser.RULE_ifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfStmt" ):
                return visitor.visitIfStmt(self)
            else:
                return visitor.visitChildren(self)




    def ifStmt(self):

        localctx = smellyParser.IfStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_ifStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(smellyParser.IF)
            self.state = 70
            self.expr(0)
            self.state = 71
            self.body()
            self.state = 75
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,4,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 72
                    self.elseifStmt() 
                self.state = 77
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,4,self._ctx)

            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==2:
                self.state = 78
                self.elseStmt()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseifStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(smellyParser.ELSE, 0)

        def IF(self):
            return self.getToken(smellyParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(smellyParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(smellyParser.BodyContext,0)


        def getRuleIndex(self):
            return smellyParser.RULE_elseifStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseifStmt" ):
                return visitor.visitElseifStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseifStmt(self):

        localctx = smellyParser.ElseifStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_elseifStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(smellyParser.ELSE)
            self.state = 82
            self.match(smellyParser.IF)
            self.state = 83
            self.expr(0)
            self.state = 84
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElseStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ELSE(self):
            return self.getToken(smellyParser.ELSE, 0)

        def body(self):
            return self.getTypedRuleContext(smellyParser.BodyContext,0)


        def getRuleIndex(self):
            return smellyParser.RULE_elseStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElseStmt" ):
                return visitor.visitElseStmt(self)
            else:
                return visitor.visitChildren(self)




    def elseStmt(self):

        localctx = smellyParser.ElseStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_elseStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.match(smellyParser.ELSE)
            self.state = 87
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(smellyParser.WHILE, 0)

        def expr(self):
            return self.getTypedRuleContext(smellyParser.ExprContext,0)


        def body(self):
            return self.getTypedRuleContext(smellyParser.BodyContext,0)


        def getRuleIndex(self):
            return smellyParser.RULE_whileStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitWhileStmt" ):
                return visitor.visitWhileStmt(self)
            else:
                return visitor.visitChildren(self)




    def whileStmt(self):

        localctx = smellyParser.WhileStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_whileStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(smellyParser.WHILE)
            self.state = 90
            self.expr(0)
            self.state = 91
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(smellyParser.FUNC, 0)

        def ID(self):
            return self.getToken(smellyParser.ID, 0)

        def LPAREN(self):
            return self.getToken(smellyParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(smellyParser.RPAREN, 0)

        def body(self):
            return self.getTypedRuleContext(smellyParser.BodyContext,0)


        def params(self):
            return self.getTypedRuleContext(smellyParser.ParamsContext,0)


        def RETURNS(self):
            return self.getToken(smellyParser.RETURNS, 0)

        def type_(self):
            return self.getTypedRuleContext(smellyParser.TypeContext,0)


        def getRuleIndex(self):
            return smellyParser.RULE_funcAssign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncAssign" ):
                return visitor.visitFuncAssign(self)
            else:
                return visitor.visitChildren(self)




    def funcAssign(self):

        localctx = smellyParser.FuncAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcAssign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(smellyParser.FUNC)
            self.state = 94
            self.match(smellyParser.ID)
            self.state = 95
            self.match(smellyParser.LPAREN)
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==14:
                self.state = 96
                self.params()


            self.state = 99
            self.match(smellyParser.RPAREN)
            self.state = 102
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==36:
                self.state = 100
                self.match(smellyParser.RETURNS)
                self.state = 101
                self.type_()


            self.state = 104
            self.body()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarAssignContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(smellyParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(smellyParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(smellyParser.ExprContext,0)


        def type_(self):
            return self.getTypedRuleContext(smellyParser.TypeContext,0)


        def ADD(self):
            return self.getToken(smellyParser.ADD, 0)

        def SUB(self):
            return self.getToken(smellyParser.SUB, 0)

        def MUL(self):
            return self.getToken(smellyParser.MUL, 0)

        def DIV(self):
            return self.getToken(smellyParser.DIV, 0)

        def MOD(self):
            return self.getToken(smellyParser.MOD, 0)

        def getRuleIndex(self):
            return smellyParser.RULE_varAssign

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarAssign" ):
                return visitor.visitVarAssign(self)
            else:
                return visitor.visitChildren(self)




    def varAssign(self):

        localctx = smellyParser.VarAssignContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_varAssign)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 107
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.state = 106
                self.type_()


            self.state = 109
            self.match(smellyParser.ID)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1015808) != 0):
                self.state = 110
                _la = self._input.LA(1)
                if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 1015808) != 0)):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 113
            self.match(smellyParser.ASSIGN)
            self.state = 114
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(smellyParser.ExprContext,0)


        def getRuleIndex(self):
            return smellyParser.RULE_arg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArg" ):
                return visitor.visitArg(self)
            else:
                return visitor.visitChildren(self)




    def arg(self):

        localctx = smellyParser.ArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_arg)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self.expr(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def arg(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(smellyParser.ArgContext)
            else:
                return self.getTypedRuleContext(smellyParser.ArgContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(smellyParser.COMMA)
            else:
                return self.getToken(smellyParser.COMMA, i)

        def getRuleIndex(self):
            return smellyParser.RULE_args

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgs" ):
                return visitor.visitArgs(self)
            else:
                return visitor.visitChildren(self)




    def args(self):

        localctx = smellyParser.ArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_args)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 118
            self.arg()
            self.state = 123
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 119
                self.match(smellyParser.COMMA)
                self.state = 120
                self.arg()
                self.state = 125
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(smellyParser.TypeContext,0)


        def ID(self):
            return self.getToken(smellyParser.ID, 0)

        def getRuleIndex(self):
            return smellyParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = smellyParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.type_()
            self.state = 127
            self.match(smellyParser.ID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(smellyParser.ParamContext)
            else:
                return self.getTypedRuleContext(smellyParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(smellyParser.COMMA)
            else:
                return self.getToken(smellyParser.COMMA, i)

        def getRuleIndex(self):
            return smellyParser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = smellyParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_params)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.param()
            self.state = 134
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==30:
                self.state = 130
                self.match(smellyParser.COMMA)
                self.state = 131
                self.param()
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(smellyParser.ID, 0)

        def LPAREN(self):
            return self.getToken(smellyParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(smellyParser.RPAREN, 0)

        def args(self):
            return self.getTypedRuleContext(smellyParser.ArgsContext,0)


        def getRuleIndex(self):
            return smellyParser.RULE_call

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCall" ):
                return visitor.visitCall(self)
            else:
                return visitor.visitChildren(self)




    def call(self):

        localctx = smellyParser.CallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 30, self.RULE_call)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(smellyParser.ID)
            self.state = 138
            self.match(smellyParser.LPAREN)
            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4563500544) != 0):
                self.state = 139
                self.args()


            self.state = 142
            self.match(smellyParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtomContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def type_(self):
            return self.getTypedRuleContext(smellyParser.TypeContext,0)


        def LBRACE(self):
            return self.getToken(smellyParser.LBRACE, 0)

        def RBRACE(self):
            return self.getToken(smellyParser.RBRACE, 0)

        def args(self):
            return self.getTypedRuleContext(smellyParser.ArgsContext,0)


        def INT(self):
            return self.getToken(smellyParser.INT, 0)

        def FLOAT(self):
            return self.getToken(smellyParser.FLOAT, 0)

        def STRING(self):
            return self.getToken(smellyParser.STRING, 0)

        def BOOL(self):
            return self.getToken(smellyParser.BOOL, 0)

        def NIL(self):
            return self.getToken(smellyParser.NIL, 0)

        def ID(self):
            return self.getToken(smellyParser.ID, 0)

        def LPAREN(self):
            return self.getToken(smellyParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(smellyParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(smellyParser.RPAREN, 0)

        def getRuleIndex(self):
            return smellyParser.RULE_atom

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAtom" ):
                return visitor.visitAtom(self)
            else:
                return visitor.visitChildren(self)




    def atom(self):

        localctx = smellyParser.AtomContext(self, self._ctx, self.state)
        self.enterRule(localctx, 32, self.RULE_atom)
        self._la = 0 # Token type
        try:
            self.state = 161
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 144
                self.type_()
                self.state = 145
                self.match(smellyParser.LBRACE)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4563500544) != 0):
                    self.state = 146
                    self.args()


                self.state = 149
                self.match(smellyParser.RBRACE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 151
                self.match(smellyParser.INT)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 152
                self.match(smellyParser.FLOAT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 153
                self.match(smellyParser.STRING)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 154
                self.match(smellyParser.BOOL)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 155
                self.match(smellyParser.NIL)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 156
                self.match(smellyParser.ID)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 157
                self.match(smellyParser.LPAREN)
                self.state = 158
                self.expr(0)
                self.state = 159
                self.match(smellyParser.RPAREN)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.uop = None # Token
            self.op = None # Token
